--- a/package.json
+++ b/package.json
@@ -12,13 +12,36 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
     "@angular/core": "~11.2.9",
+    "@angular/fire": "^6.1.4",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.9",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@firebase/firestore": "^2.2.3",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@material/card": "^10.0.0",
+    "@material/list": "^10.0.0",
+    "@material/textfield": "^10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "angular-material": "^1.2.2",
+    "angularfire2": "^5.4.2",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "firebase": "^8.3.3",
+    "firebase-tools": "^9.9.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
+    "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,6 +50,7 @@
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/cors": "^2.8.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
