--- a/angular.json
+++ b/angular.json
@@ -103,8 +103,7 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/assets/custom.js",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "src/assets/custom.js"
             ]
           }
         },
