--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/assets/custom.js",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/bs4-toast/dist/toast.min.css"
             ]
           },
           "configurations": {
@@ -103,7 +104,8 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/assets/custom.js"
+              "src/assets/custom.js",
+              "node_modules/bs4-toast/dist/toast.min.css"
             ]
           }
         },
