--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angularfire2": "^5.4.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bs4-toast": "^1.2.0",
     "cors": "^2.8.5",
     "firebase": "^8.3.3",
     "firebase-tools": "^9.9.0",
@@ -52,6 +53,7 @@
     "@angular/compiler-cli": "~11.2.9",
     "@types/cors": "^2.8.10",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
