--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^8.3.3",
     "firebase-tools": "^9.9.0",
     "hammerjs": "^2.0.8",
+    "heroku": "^7.52.0",
     "jquery": "^3.6.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
@@ -67,5 +68,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "v12.16.3",
+    "npm": "6.14.4"
   }
 }
